# -*- sh -*-

# -------------------------------------------------
# CHANGELOG - multi-chan-fit.py
# -------------------------------------------------

# Key is:
# [+] added
# [-] removed
# [~] changed/fixed
# [V] version change
# ====================================================================


# 2016-12-20
# --------------------------------------------------------------------
# V switch to v24-broken-chain.py
# + now only crystals with 2 or more signals get TFractionFitter
# + need at least 2 MC for TFractionFitter to work
# - do not add the bkgs to the total MC from the fit - the data is
#   already bkg subtracted


# 2016-12-17
# --------------------------------------------------------------------
# ~ can now arbitrarily set backgrounds and signals per crystal
# + unique colors now working for the legends too
# + add uniqColor so each location and isotope has the same color


# 2016-12-16
# --------------------------------------------------------------------
# + add uniqSig to get unigue sig names and length for fitter object
# + add uniqAll to get unique names of bkgs and sigs for color scheme
# V switch to 23-separate-sig-bkg.py


# 2016-12-15
# --------------------------------------------------------------------
# ~ played around with the activity scalings - I think I'm close
# ~ updates the backgrounds2.txt file with PMT K40 activities
# + I have a new joined rootfile with Pushpa's calibs and resols
#   called join22-1544-master.root
# ~ ah, and was forgetting to scale by the dru factor - internal K40
#   looks correct again - now back to work on the pmt scalings...
# ~ shoot, i had mbqkg/kg and that should be mbqkg*kg!!!
# + start working on pmt scaling
# ~ i think the internal scaling should be events/detected
#   which becomes bq * runtime * (1./generated)
# ~ tweaked v21 to plot just data for comparison to v22
# ~ tweaked v22 to use new calibs and resols
# + added join22.py to use new calibs and resols