@@ -14,7 +14,12 @@
 
 # 2016-12-20
 # --------------------------------------------------------------------
-# V switch to v24-broken-chain.py
+# ~ testing with local data right now...
+# + use funcs3.py
+# + use backgrounds3.txt
+# V switch to v30-broken-chain.py
+# V switch to v24-broken-chain.py - nope, this is going to be a big
+#   addition with many changes to code everywhere - go v30 for this
 # + now only crystals with 2 or more signals get TFractionFitter
 # + need at least 2 MC for TFractionFitter to work
 # - do not add the bkgs to the total MC from the fit - the data is
